cluster/apps/ddb-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddb-proxy
  labels:
    app.kubernetes.io/name: ddb-proxy
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ddb-proxy
